Add publications count
