# myapi/keyword_endpoint.py
@@ -3,7 +3,10 @@ import os
 import logging
 import pathlib
 
-from config import MYSQL_CREDS
+from pymongo import MongoClient
+from pymongo.errors import ConnectionFailure
+
+from config import MONGODB_CREDS,MYSQL_CREDS
 from mysql.connector import connect, Error
 
 
@@ -52,4 +55,56 @@ def create():
 
     # return jsonify({"message": f"Keyword {keyword_str} with id {id}"}), 201
 
+def get_popular():
+    from flask import request, jsonify
+    # Get query parameters
+    start_year = int(request.args.get('startDate'))
+    end_year = int(request.args.get('endDate'))
+
+    # Query MongoDB
+    mongodb_query = [
+        {
+            '$match': {
+                'year': {'$gte': start_year, '$lte': end_year}
+            }
+        },
+        {
+            '$unwind': '$keywords'
+        },
+        {
+            '$group': {
+                '_id': '$keywords.name',
+                'publicationsCount': {'$sum': 1}
+            }
+        },
+        {
+            '$sort': {'publicationsCount': -1}
+        },
+        {
+            '$limit': 10
+        },
+        {
+            '$project': {
+                '_id': 0,
+                'keywordName': '$_id',
+                'publicationsCount': 1
+            }
+        }
+    ]
+
+    try:
+        with MongoClient(MONGODB_CREDS["url"]) as client:
+            db = client[MONGODB_CREDS["database"]]
+            publication_collection = db["publications"]
+            
+            results_iterator = publication_collection.aggregate(mongodb_query)
+            results = []
+            for entry in results_iterator:
+                results.append(entry)
+
+            return jsonify(results), 200
+
+    except Exception as e:
+        logging.error(f"Failed to connect to MongoDB or execute query: {e}")
+        return jsonify({"error": str(e)}), 500
 
